added nav and buttons

--- a/less/global.less
+++ b/less/global.less
@@ -39,6 +39,17 @@ img {
   height: auto;
 }
 
+a {
+  font-size: 1.6rem;
+  padding: 0 15px;
+  text-decoration: none;
+  color: black;
+}
+
+button {
+  font-size: 2rem;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
