--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
 // Navigation Styles here
+.navigation-bar {
+    border-bottom: 2px dashed @navigation-border;
+    width: 100vw;
+    padding: 1% 0;
+
+    nav {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        h1, a {
+            color: @font-color;
+        }
+    }
+
+}
