--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,6 +56,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn{
+        .button-base (@button-bg, @button-text)
+      }
     }
   }
 }// home
