--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
 // Mixins in here
+
+.button-base ( @background, @color) {
+    width: 100%;
+    padding: 10px;
+    background-color: @background;
+    color: @color;
+    border-radius: 15px;
+}
