--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,11 @@
 .home {
 
+  header {
+    h2 {
+      margin-top: 30px;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -11,11 +17,19 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -30,17 +44,29 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        order: -1;
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
     }
+
+    @media @mobile {
+      display: flex;
+    }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    
+    @media @mobile {
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
@@ -53,9 +79,18 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 80%;
+      }
 
       .btn{
         .button-base (@button-bg, @button-text)
